# LINEBot2022-DRF

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  debug.py  definition.py  for.py  if.py  init_project.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: bot_info.py  models.py  request_create.py  urls.py  validators.py  views.py
api/migrations/: 0001_initial.py
event_line_bot_numeron/: asgi.py  wsgi.py
event_line_bot_numeron/settings/: base.py  dev.py
